--- a/courses.html
+++ b/courses.html
@@ -73,11 +73,11 @@
   <main>
     <div class="level-buttons">
       <a href="P1p2.html">ป.1 – ป.2</a>
-      <a href="P1p2.html">ป.3 – ป.4</a>
-      <a href="P1p2.html">ป.5</a>
-      <a href="P1p2.html">ป.6</a>
+      <a href="P3p4.html">ป.3 – ป.4</a>
+      <a href="P5.html">ป.5</a>
+      <a href="P6.html">ป.6</a>
       <a href="M1m2.html">ม.1 – ม.2</a>
-      <a href="M1m2.html">ม.3</a>
+      <a href="M3.html">ม.3</a>
       <a href="register.html">สมัครเรียน (ที่นี้)</a>
       <a href="re.html">สอบถามข้อมูล</a>
       <a href="index.html" class="back">&larr; กลับหน้าหลัก</a>
