--- a/P1p2.html
+++ b/P1p2.html
@@ -68,12 +68,12 @@
     
     <div class="course-box">
       <h2>📚 เตรียม Gifted</h2>
-      <p><strong>เรียน 3 รายวิชา:</strong> วิทยาศาสตร์ 🔬 คณิตศาสตร์ ➗ ภาษาอังกฤษ 🇬🇧</p>
-      <p><strong>🗓️ เวลาเรียน:</strong> กลุ่มวันอาทิตย์ เวลา 09.00–15.00 น.</p>
+      <p><strong>เรียน 5 รายวิชา:</strong> วิทยาศาสตร์ 🔬 คณิตศาสตร์ ➗ ภาษาอังกฤษ ภาษาไทย สังคม</p>
+      <p><strong>🗓️ เวลาเรียน:</strong> กลุ่มวันอาทิตย์ เวลา 09.00–16.00 น.</p>
     </div>
     <div class="course-box">
       <h2>ป.1–ป.2 เตรียม Gifted</h2>
-      <p>📚 เรียน 3 รายวิชา: วิทยาศาสตร์ 🔬 คณิตศาสตร์ ➗ ภาษาอังกฤษ 🇬🇧</p>
+      <p>📚 เรียน 5 รายวิชา: วิทยาศาสตร์ 🔬 คณิตศาสตร์ ➗ ภาษาอังกฤษ ภาษาไทย สังคมศึกษา</p>
       <p>🗓️ วันอาทิตย์ เวลา 09.00–15.00 น.</p>
       <h3>💵 ค่าลงทะเบียน</h3>
       <ul>
